--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ whois = "^1.20240129.2"
 pillow = "^10.2.0"
 pyyaml = "^6.0.1"
 supabase = "^2.4.0"
+binance-connector = "^3.6.0"
+cryptography = "^42.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
