--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyyaml = "^6.0.1"
 supabase = "^2.4.0"
 binance-connector = "^3.6.0"
 cryptography = "^42.0.5"
+flask = "^3.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
